@@ -1,3 +1,7 @@
+2005-06-14  Albert Chu  <chu11@llnl.gov>
+
+	* Added finishing touches to monitor support in cerebrod.
+	
 2005-06-13  Albert Chu  <chu11@llnl.gov>
 
 	* Rename monitor module metric module in preparation for changes.
